*libewf-20171104-r1 (07 Apr 2018)

  07 Apr 2018;  <kalin@gentoo.org> +libewf-20171104-r1.ebuild,
  -libewf-20140608.ebuild, -libewf-20171104.ebuild:
  app-forensics/libewf: ebuild polishing  * added USE=bzip2:      was implicit
  before * added USE=static      (not tested) for static executables * added
  USE=static-libs for libewf.a (required for sleuthkit?) * added --disable-rpath
  is it needed? * removed USE=ewf       v1 API not supported anymore :-( * added
  slots for libs  as repoman demanded  ToDo: * Fix issues with old
  libewf.so.2.0.0 uninstall (BGO #521968) * libbfio support: local, despite
  --with-libbfio * add more libraries as separate packages * test USE="static" *
  test USE="python", USE="fuse" * fix USE=java for autopsy use
  https://oylenshpeegul.wordpress.com/2017/10/18/autopsy-4-5-works-in-linux/
  https://periciacomputacional.com/linux-install-autopsy/  Current test run:
  app-forensics/libewf-20171104-r1:0/3::pkalin  USE="bzip2 nls ssl static-libs
  unicode zlib -debug -fuse -python -static -uuid" PYTHON_TARGETS="python2_7
  -python3_4 -python3_5"  ./configure --prefix=/usr --build=x86_64-pc-linux-gnu
  --host=x86_64-pc-linux-gnu --mandir=/usr/share/man --infodir=/usr/share/info
  --datadir=/usr/share --sysconfdir=/etc --localstatedir=/var/lib --disable-
  dependency-tracking --disable-silent-rules
  --docdir=/usr/share/doc/libewf-20171104-r1
  --htmldir=/usr/share/doc/libewf-20171104-r1/html --libdir=/usr/lib64
  --disable-rpath --enable-multi-threading-support --with-libbfio --disable-
  static-executables --enable-static --disable-debug-output --disable-verbose-
  output --disable-python --enable-nls --with-libiconv-prefix --with-libintl-
  prefix --enable-wide-character-type --with-zlib --with-bzip2 --with-openssl
  --without-libuuid --without-libfuse  Building:    libcerror support:
  yes    libcthreads support:                      yes    libcdata support:
  yes    libcdatetime support:                     yes    libclocale support: